# converter_tts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: .pre-commit-config.yaml  main.py  public_api.py  pyproject.toml  setup.cfg
src/api/: __init__.py  converter.py
src/app/: main.py
src/app/services/: converter.py  models.py
src/app/services/utils/: parser.py  translator.py
src/services/: converter.py
src/services/texts/: text.txt
