[project]
name = ""
version = ""
description = ""
authors = [
    {name = "aibulat.ryic", email = "aibulat.ryic@gmail.com"},
]
dependencies = [
    "fastapi~=0.70",
    "uvicorn~=0.15",
    "mypy~=0.910",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit~=2.14",
    "ward==0.63.0b0",
]
